arreglo header estatico

--- a/index.html
+++ b/index.html
@@ -436,7 +436,21 @@
       </div>
       <p class="card-p">5 Tendencias de...</p>
     </article>
-
+  </article>
+  <article class="card">
+    <div class="card-image">
+      <div class="card-top">
+        <h4>Top 3...</h4>
+        <button class="card-btn">Guardar</button>
+      </div>
+      <img class="image" src="https://picsum.photos/id/891/200/300" alt="">
+      <div class="card-bottom">
+        <img class="icon-card" src="images/arrow-interface-send-svgrepo-com.svg" alt="">
+        <img class="icon-card" src="images/three-small-dots-svgrepo-com.svg" alt="">
+      </div>
+    </div>
+    <p class="card-p">5 Tendencias de...</p>
+  </article>
   </main>
   <nav id="nav-bar-pinterest-movil">
     <h3 class="modified">Navegar</h3>
